fix: btn color on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -237,7 +237,8 @@ gap: 5px;
   gap: 5px;
 }
 .btn {
-  padding: 5px 10px
+  padding: 5px 10px;
+  color: #363538;
 }
 
 }
